# projeto-aa

./: .gitignore  README.md  tutorial-latex-github.md
.github/workflows/: latex.yml
data/: convertFloatToInt.py  massa.txt
data/raw/uniformInt/: uniform-input-1000-1-int.txt  uniform-input-10000-1-int.txt  uniform-input-100000-1-int.txt  uniform-input-2000-1-int.txt  uniform-input-25000-1-int.txt  uniform-input-3000-1-int.txt  uniform-input-4000-1-int.txt  uniform-input-5000-1-int.txt  uniform-input-50000-1-int.txt  uniform-input-6000-1-int.txt  uniform-input-7000-1-int.txt  uniform-input-8000-1-int.txt  uniform-input-9000-1-int.txt
latex/: biblio.bib  main.tex
latex/.github/workflows/: latex.yml
latex/CAPITULOS/: 0.abstract.tex  0.resumo.tex  1.Introducao.tex  2.Algoritmos_linear.tex  2.Algoritmos_n_quadrado.tex  3.Algoritmos_linear.tex  3.Algoritmos_n_quadrado.tex  4.Algoritmos_log_linear.tex  5.ExperimentosComputacionais.tex  5.Miscelanea.tex  6.ExperimentosComputacionais.tex  7.Conclusoes.tex
latex/CAPÍTULOS/: 1.Introdução.tex  3.Algoritmos_n_quadrado.tex  5.ExperimentosComputacionais.tex  6.ComentáriosFinais.tex  ApêndiceA.tex
libs/lib-c/: Makefile  README.md
libs/lib-c/include/: bubble_sort.h  linear.h  (+2 more)
libs/lib-cplusplus/: Makefile  README.md
libs/lib-cpp/: Makefile  README.md
libs/lib-python/: README.md  setup.py
libs/lib_python/: README.md  pyproject.toml  requirements.txt
libs/lib_python/src/: quadratic.py
libs/lib_python/tests/: test_linear.py  test_logarithmic.py
results/: report_linear.md  report_logarithmic.md  report_quadratic.md
(+38 files in other folders)
