[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-python-aa"
version = "0.1.0"
description = "Biblioteca de algoritmos de ordenação em Python"
authors = [
  { name="Aline Milene", email="aline.milene@aluno.ufabc.edu.br" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
